# 2021_i2p1_lab1_1

./: .gitignore  CMakeLists.txt  README.md  create_golden.bash  create_golden_filever.bash  jplag.bash  run.bash  run.ps1  run_filever.bash  run_filever.ps1
TA/: lab1_1_TA.cpp
TA (助教)/: lab1_1_TA.cpp
testbench/: lab1_1_01.in  lab1_1_02.in  lab1_1_03.in  lab1_1_05.in
